Bring follow fly form up from bottom of mobile menu, fix slight gray line bleeding between menu and top bar

--- a/wp-content/themes/mspflymag/assets/scss/modules/_header.scss
+++ b/wp-content/themes/mspflymag/assets/scss/modules/_header.scss
@@ -31,6 +31,8 @@ header#masthead {
 #follow-fly--container {
 	border-top: 1px solid $light-gray;
 	margin-top: 20px;
+  //justify-content: flex-end;
+  margin-bottom: 60px;
 }
 
 #main-content--container {
