--- a/wp-content/themes/mspflymag/assets/scss/modules/_navigation.scss
+++ b/wp-content/themes/mspflymag/assets/scss/modules/_navigation.scss
@@ -47,7 +47,7 @@
 .mobile-menu--container {
 	position: fixed;
   z-index: 1000;
-  top: $titlebar-height; //set to height of top bar
+  top: $titlebar-height - 2; //set to height of top bar
   height: 100vh;
 	width: 100vw;
   height: calc(100vh - $titlebar-height);
@@ -97,7 +97,7 @@
   }
   
   #follow-fly-container {
-		justify-content: flex-end;
+		
 	}
 }
 
@@ -106,6 +106,11 @@
   @include grid-row;
   position: relative; //keep this inside the grid
   padding-top: rem-calc(15px);
+  
+  @include breakpoint(tablet down) {
+    display: none !important;
+  }
+
   
   .top-bar-left {
     @include grid-column(4);
